# agent-template

python-stream/: .env.default  README.md  pyproject.toml
python-stream/src/common/: constants.py
python-stream/src/common/abstracts/: __init__.py
python-stream/src/common/exceptions/: __init__.py  app_exception.py
python-stream/src/common/helpers/: __init__.py  logger_helper.py  status_helper.py
python-stream/src/infra/web_server/: __init__.py  web_server_routes.py
python-stream/src/module/: agent_controller.py  agent_models.py  agent_services.py
python-stream/src/module/example/: __init__.py  example_models.py
python-sync/: .env.default  .gitignore  README.md  pyproject.toml  settings.json
python-sync/src/: main.py  settings.py
python-sync/src/common/: common_models.py
python-sync/src/common/abstracts/: base_exception.py
python-sync/src/common/exceptions/: interface_exception.py  server_exception.py
python-sync/src/common/helpers/: __init__.py  error_helper.py  result_helper.py
python-sync/src/infra/web_server/: web_server_routes.py  web_server_service.py
python-sync/src/module/: __init__.py  agent_controller.py  agent_models.py  agent_service.py  agent_services.py  ai_services.py  message_controller.py  message_models.py  message_services.py  settings_controller.py  settings_models.py  settings_services.py  task_controller.py  task_models.py  task_services.py
python-sync/src/module/example/: example_controller.py  example_service.py  example_service_test.py
